[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stringx"
description = "STRING DB API Client"
authors = [{ name = "Hugo Cachitas", email = "hcachitas@gmail.com" }]
dependencies = ["httpx>=0.27.0"]
requires-python = ">=3.9"
readme = "README.md"
keywords = [
    "string", "api", "client", "httpx",
    "sib", "cpr", "embl", "biodata", "elixir",
    "protein", "gene", "interaction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/stringx"
Repository = "https://github.com/cachitas/stringx"
Issues = "https://github.com/cachitas/stringx/issues"

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.1.1", "pytest-httpx>=0.30.0"]
examples = [
    "pandas>=2.2.1",
    "ipykernel>=6.29.4",
]

[tool.pdm.version]
source = "file"
path = "src/stringx/__init__.py"
