[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stringx"
description = "STRING DB API Client"
authors = [{ name = "Hugo Cachitas", email = "hcachitas@gmail.com" }]
dependencies = ["httpx>=0.27.0"]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "string",
    "api",
    "client",
    "httpx",
    "sib",
    "cpr",
    "embl",
    "biodata",
    "elixir",
    "protein",
    "gene",
    "interaction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/stringx"
Repository = "https://github.com/cachitas/stringx"
Issues = "https://github.com/cachitas/stringx/issues"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.5",
    "mypy>=1.9.0",
    "tox-pdm>=0.7.2",
]

[tool.pdm.version]
source = "file"
path = "src/stringx/client.py"

[tool.pdm.scripts]
test = "pytest -v tests/"

[tool.ruff]
lint.select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle - Warning
    "UP", # pyupgrade
]

extend-include = ["*.ipynb"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
xfail_strict = true
markers = ["network: tests that need network", "integration: integration tests"]
